--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "seed": "node seed.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "moment": "^2.29.4"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1"
   },
-  "keywords": ["booking", "platform", "api", "nodejs", "express"],
+  "keywords": [
+    "booking",
+    "platform",
+    "api",
+    "nodejs",
+    "express"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
