--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "seed-products": "node seed-products.js",
+    "generate-vapid": "node scripts/generateVapidKeys.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,7 +22,8 @@
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
     "jest": "^29.6.4",
